test/types/records/split-init/split-init-out-return-intent-overloads4.good
split-init-out-return-intent-overloads4.chpl:28: In function 'test4':
split-init-out-return-intent-overloads4.chpl:30: error: 'x' is not initialized and has no type
split-init-out-return-intent-overloads4.chpl:30: note: cannot find initialization point to split-init this variable
split-init-out-return-intent-overloads4.chpl:31: note: 'x' is used here before it is initialized
